--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -25,7 +25,6 @@
                 width="100%"
               >
             </a>
-            
 
             <div class="card-body border-top">
               <b class="card-text">
@@ -38,9 +37,14 @@
                 <button 
                   type="button" 
                   class="btn btn-sm btn-outline-secondary" 
-                  data-product_id="<%- product.id %>"
-                  <% if(product.stock == 0) { %>
+                  data-productId="<%- product.id %>"
+                  <% if(product.stock == 0 || typeof(user) == "undefined") { %>
                     disabled
+                  <% } %>
+                  <% if(typeof(user) == "undefined") { %>
+                    data-userId=""
+                  <% } else { %>
+                    data-userId="<%- user.id %>"
                   <% } %>
                 >
                   Add to cart
@@ -67,6 +71,11 @@
       class="btn btn-primary" 
       data-currentPage="1" 
       data-totalPages="<%- totalPages %>"
+      <% if(typeof(user) == "undefined") { %>
+        data-userId=""
+      <% } else { %>
+        data-userId="<%- user.id %>"
+      <% } %>
     >
       Load more
     </button>
