Re-worked views to include logic to handle toggleCart

--- a/src/views/public/partials/navbar.ejs
+++ b/src/views/public/partials/navbar.ejs
@@ -14,7 +14,7 @@
     </svg>
     <span id="productCount" class="badge badge-info">
       <% if(typeof(user) !== "undefined") { %>
-        <%- cartItems %>
+        <%- cart.length %>
       <% } else { %>
         0
       <% } %>
