--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -36,7 +36,16 @@
               <div class="d-flex justify-content-between align-items-center">
                 <button 
                   type="button" 
-                  class="btn btn-sm btn-outline-secondary" 
+                  <% if(cart.length == 0) { %>
+                    class="btn btn-sm btn-outline-info btn-cart" 
+                  <% } %>
+                  <% cart.forEach(item => { %>
+                    <% if(item.product_id == product.id) { %>
+                      class="btn btn-sm btn-outline-danger btn-cart" 
+                    <% } else { %>
+                      class="btn btn-sm btn-outline-info btn-cart" 
+                    <% } %>
+                  <% }) %>
                   data-productId="<%- product.id %>"
                   <% if(product.stock == 0 || typeof(user) == "undefined") { %>
                     disabled
@@ -47,7 +56,16 @@
                     data-userId="<%- user.id %>"
                   <% } %>
                 >
-                  Add to cart
+                  <% if(cart.length == 0) { %>
+                    Add to cart
+                  <% } %>
+                  <% cart.forEach(item => { %>
+                    <% if(item.product_id == product.id) { %>
+                      Remove
+                    <% } else { %>
+                      Add to cart
+                    <% } %>
+                  <% }) %>
                 </button>
                 <b class="text-body">
                   <%- product.price %> €
@@ -83,4 +101,4 @@
 <% } %>
 
 <script src="/js/pagination.js"></script>
-
+<script src="/js/toggleCart.js"></script>
