--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -36,16 +36,17 @@
               <div class="d-flex justify-content-between align-items-center">
                 <button 
                   type="button" 
-                  <% if(cart.length == 0) { %>
-                    class="btn btn-sm btn-outline-info btn-cart" 
-                  <% } %>
+                  <% let found = false %>
                   <% cart.forEach(item => { %>
                     <% if(item.product_id == product.id) { %>
-                      class="btn btn-sm btn-outline-danger btn-cart" 
-                    <% } else { %>
-                      class="btn btn-sm btn-outline-info btn-cart" 
+                      <% found = true %>
                     <% } %>
                   <% }) %>
+                  <% if (found) { %>
+                    class="btn btn-sm btn-outline-danger btn-cart" 
+                  <% } else { %>
+                    class="btn btn-sm btn-outline-info btn-cart" 
+                  <% } %>
                   data-productId="<%- product.id %>"
                   <% if(product.stock == 0 || typeof(user) == "undefined") { %>
                     disabled
@@ -56,16 +57,17 @@
                     data-userId="<%- user.id %>"
                   <% } %>
                 >
-                  <% if(cart.length == 0) { %>
-                    Add to cart
-                  <% } %>
+                  <% found = false %>
                   <% cart.forEach(item => { %>
                     <% if(item.product_id == product.id) { %>
-                      Remove
-                    <% } else { %>
-                      Add to cart
+                      <% found = true %>
                     <% } %>
                   <% }) %>
+                  <% if (found) { %>
+                    Remove
+                  <% } else { %>
+                    Add to cart
+                  <% } %>
                 </button>
                 <b class="text-body">
                   <%- product.price %> €
