Re-named loaded scripts

--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -102,5 +102,6 @@
   </div>
 <% } %>
 
+<script src="/js/function-toggleCart.js"></script>
+<script src="/js/event-toggleCart.js"></script>
 <script src="/js/pagination.js"></script>
-<script src="/js/toggleCart.js"></script>
