--- a/src/views/public/product/product-details.ejs
+++ b/src/views/public/product/product-details.ejs
@@ -90,4 +90,5 @@
   </div>
 </div>
 
-<script src="/js/toggleCart.js"></script>
+<script src="/js/function-toggleCart.js"></script>
+<script src="/js/event-toggleCart.js"></script>
