--- a/src/views/public/product/cart.ejs
+++ b/src/views/public/product/cart.ejs
@@ -19,6 +19,11 @@
           </div>
         <% } %>
 
+        <div class="alert alert-danger alert-dismissible fade show mt-3 d-none">
+          <strong>Error! </strong><span></span>
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+        </div>
+
         <% cart.forEach(item => { %>
           <% products.forEach(product => { %>
             <% if(product.id == item.product_id) { %>
