--- a/src/views/public/product/cart.ejs
+++ b/src/views/public/product/cart.ejs
@@ -19,9 +19,8 @@
           </div>
         <% } %>
 
-        <div class="alert alert-danger alert-dismissible fade show mt-3 d-none">
+        <div class="alert alert-danger fade show mt-3 d-none">
           <strong>Error! </strong><span></span>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
         </div>
 
         <% cart.forEach(item => { %>
@@ -42,7 +41,9 @@
                 <div class="col-md-6">
                   <h3 class="h4 my-3"><%- product.title %></h3>
                   <p class="my-2"><%- product.description %></p>
-                  <p class="my-2"><b>Stock: </b><%- product.stock %></p>
+                  <p class="my-2">
+                    <b>Stock: </b><%- (product.stock + item.quantity) %>
+                  </p>
                   <p class="my-2"><b>Price: </b><%- product.price %> €</p>
                   <label for="quantity" class="d-inline-block py-2 my-0"><b>Quantity:</b></label>
                   <input 
@@ -50,7 +51,7 @@
                     type="number" 
                     name="quantity" 
                     min="0" 
-                    max="<%- product.stock %>" 
+                    max="<%- (product.stock + item.quantity) %>" 
                     value="<%- item.quantity %>"
                     data-productId="<%- product.id %>" 
                     data-userId="<%- user.id %>"
