Re-worked elements distribution in HTML

--- a/src/views/public/product/checkout-1.ejs
+++ b/src/views/public/product/checkout-1.ejs
@@ -12,34 +12,61 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <form action="">
+        <form action="" method="POST">
           <div class="form-group mb-2">
             <label for="receiver">Receiver / Send to:</label>
-            <input class="form-control" type="text" name="receiver" id="receiver">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="receiver" 
+              id="receiver"
+            >
           </div>
 
           <div class="form-group mb-2">
             <label for="address">Shipping Address:</label>
-            <input class="form-control" type="text" name="address" id="address">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="address" 
+              id="address"
+            >
           </div>
 
           <div class="form-group mb-2">
             <label for="zipCode">Zip Code:</label>
-            <input class="form-control" type="text" name="zipCode" id="zipCode">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="zipCode" 
+              id="zipCode"
+            >
           </div>
 
           <div class="form-group mb-2">
             <label for="country">Country:</label>
-            <input class="form-control" type="text" name="country" id="country">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="country" 
+              id="country">
           </div>
 
           <div class="form-group mb-2">
             <label for="phoneNumber">Phone number:</label>
-            <input class="form-control" type="text" name="phoneNumber" id="phoneNumber">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="phoneNumber" 
+              id="phoneNumber"
+            >
           </div>
 
           <a href="/cart" class="btn btn-secondary">Back</a>
-          <button type="submit" class="btn btn-primary">
+          <button 
+            type="submit" 
+            class="btn btn-primary"
+          >
             Next
           </button>
         </form>
