--- a/src/views/public/product/checkout-2.ejs
+++ b/src/views/public/product/checkout-2.ejs
@@ -12,6 +12,9 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
+        
+        <%- include ('../partials/messages.ejs') %>
+        
         <form action="">
           <div class="form-group mb-2">
             <label for="ccNumber">Credit Card Number:</label>
