Completed design for view 'checkout-3.ejs'

--- a/src/views/public/product/checkout-3.ejs
+++ b/src/views/public/product/checkout-3.ejs
@@ -12,34 +12,25 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
+
+        <%- include ('../partials/messages.ejs') %>
+
         <div class="row justify-content-between">
           <div class="col-md-6">
             <h5 class="h5 mt-3">
               Shipping details
             </h5>
             <p class="my-2 ml-2">
-              <b>Send to:</b>
-              Jorge García Torralba
+              <b>Address: </b><%- user.address %>
             </p>
             <p class="my-2 ml-2">
-              <b>Address:</b>
-              Avda. Inventada, 123
+              <b>Zip code: </b><%- user.zipCode %>
             </p>
             <p class="my-2 ml-2">
-              <b>Zip code:</b>
-              08011
+              <b>Country: </b><%- user.country %>
             </p>
             <p class="my-2 ml-2">
-              <b>City:</b>
-              Barcelona
-            </p>
-            <p class="my-2 ml-2">
-              <b>Country:</b>
-              Spain
-            </p>
-            <p class="my-2 ml-2">
-              <b>Phone number:</b>
-              666778899
+              <b>Phone number: </b><%- user.phone %>
             </p>
           </div>
 
@@ -48,12 +39,10 @@
               Payment information
             </h5>
             <p class="my-2 ml-2">
-              <b>Credit Card Number:</b>
-              1111-2222-3333-4444
+              <b>Credit Card Number: </b><%- user.ccNumber %>
             </p>
             <p class="my-2 ml-2">
-              <b>CVV Number:</b>
-              567
+              <b>CVV Number: </b><%- user.cvvNumber %>
             </p>
           </div>
         </div>
@@ -63,69 +52,67 @@
             <h5 class="h5 mt-3">
               Products
             </h5>
-            <div class="row product mx-auto mt-3 pb-3 border-bottom">
-              <div class="col-md-4">
-                <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
-              </div>
-              <div class="col-md-8">
-                <p class="my-2 ml-2">
-                  <b>Product:</b>
-                  4ever Gold
-                </p>
-                <p class="my-2 ml-2">
-                  <b>Price:</b>
-                  29.95 €
-                </p>
-                <p class="my-2 ml-2">
-                  <b>Quantity:</b>
-                  6 units
-                </p>
-                <p class="my-2 ml-2">
-                  <b>Total:</b>
-                  180 €
-                </p>
-              </div>
-            </div>
+            
+            <% cart.forEach(item => { %>
+              <% products.forEach(product => { %>
+                <% if(product.id == item.product_id) { %>
+                  <% let productImages = [] %>
+                  <% images.forEach(image => { %>
+                    <% if(image.product_id == product.id){ %>
+                      <% productImages.push(image) %>
+                    <% } %>
+                  <% }) %>
 
-            <div class="row product mx-auto mt-3 pb-3 border-bottom">
-              <div class="col-md-4">
-                <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
-              </div>
-              <div class="col-md-8">
-                <p class="my-2 ml-2">
-                  <b>Product:</b>
-                  4ever Gold
-                </p>
-                <p class="my-2 ml-2">
-                  <b>Price:</b>
-                  29.95 €
-                </p>
-                <p class="my-2 ml-2">
-                  <b>Quantity:</b>
-                  6 units
-                </p>
-                <p class="my-2 ml-2">
-                  <b>Total:</b>
-                  180 €
-                </p>
-              </div>
-            </div>
+                  <div class="row product mx-auto mt-3 pb-3 border-bottom">
+                    <div class="col-md-4">
+                      <img class="d-block w-100 border" src="<%- productImages[0].path %>" alt="Product image">
+                    </div>
+                    <div class="col-md-8">
+                      <p class="my-2 ml-2">
+                        <b>Product: </b><span><%- product.title %></span>
+                      </p>
+                      <p class="my-2 ml-2">
+                        <b>Price: </b><span><%- product.price %></span> €
+                      </p>
+                      <p class="my-2 ml-2">
+                        <b>Quantity: </b><span><%- item.quantity %></span> units
+                      </p>
+                      <p class="my-2 ml-2">
+                        <% let totalProduct = (item.quantity * product.price) %>
+                        <b>Total: </b><span><%- totalProduct.toFixed(2) %></span> €
+                      </p>
+                    </div>
+                  </div>
+
+                <% } %>
+              <% }) %>
+            <% }) %>
+
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
             <h5 class="h5 mt-3">
-              <b>Total order:</b>
-              599 €
+              <b>Total order: </b>
+              <% let totalOrder = 0 %>
+              <% cart.forEach(item => { %>
+                <% products.forEach(product => { %>
+                  <% if(product.id == item.product_id) { %>
+                    <% totalOrder += (product.price * item.quantity) %>
+                  <% } %>
+                <% }) %>
+              <% }) %>
+              <span><%- totalOrder.toFixed(2) %></span> €
             </h5>
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
-            <form action="" class="mt-3">
-
+            <form action="/checkout/3" method="POST" class="mt-3">
+              <input type="hidden" name="_csrf" value="<%- csrfToken %>">
+              
               <div class="form-check mb-2">
                 <input class="form-check-input" type="checkbox" value="" id="terms">
                 <label class="form-check-label" for="terms">
