Added data-attr. to identify elements with event listener

--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -36,6 +36,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <button 
                   type="button" 
+                  data-listener="true"
                   <% let found = false %>
                   <% cart.forEach(item => { %>
                     <% if(item.product_id == product.id) { %>
